# django-templates-explained

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
blog/: utils.py  views.py
blog/content/: index_content.json  post_content.json
blog/content/iter4/: post_content.json
config/: settings.py  urls.py
templates/blog/: base.html  index.html  post.html
templates/blog/includes/: nav.html
templates/iter1/: index.html  post.html
templates/iter2/: index.html  post.html
templates/iter2/src/: base.html  index.html  post.html
templates/iter3/: index.html
templates/iter3/src/: base.html  index.html  post.html
templates/iter3/src/includes/: footer.html
templates/iter4/: post.html
templates/iter4/src/: base.html  index.html  post.html
templates/iter4/src/includes/: post-preview.html
