[tool.poetry]
name = "base-example-django-project"
version = "0.1.0"
description = ""
authors = ["Dastan Abd <dastand.climber@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
django-stubs = "^1.9.0"
python-decouple = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
